--- a/src/static/css/default.css
+++ b/src/static/css/default.css
@@ -1,8 +1,8 @@
-* {
+body {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
